[tool.poetry]
name = "enduro"
version = "0.1.0"
description = ""
authors = ["Logan Grado <lgrado@apple.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.1"
pandas = "^1.5.3"
matplotlib = "^3.6.3"
pyqt5 = "^5.15.7"
pydantic = "^1.10.4"
click = "^8.1.3"
jsonnet = "^0.19.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ipython = "^8.8.0"
ipdb = "^0.13.11"
pytest = "^7.2.1"
black = "^22.12.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
enduro = "enduro.cli.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
